fix tab spacing

--- a/css/ww.css
+++ b/css/ww.css
@@ -1,1 +1,1 @@
-@import url('ww-blessed1.css?z=1378914077661');#ibm-content .bgc-blue{background-color:#4982c3}
+@import url('ww-blessed1.css?z=1378915029474');#ibm-content .bgc-k05{background-color:rgba(0,0,0,0.05)}#ibm-content .bgc-blue{background-color:#4982c3}
